2011-01-07  vadim  <vadim@netcitadel.com>

	* ASA8Object.cpp (ASA8Object): refs #1885 "named network and
	service objects in pix8". So far, these objects are only used
	for nat configuration.

	* NATCompiler_asa8_writers.cpp (processNext): fixes #1903 "correct
	order of clear commands for ASA 8.3"

	* NATCompiler_asa8_writers.cpp (printSDNAT): refs #1886 "new nat
	configuration in pix 8.3". Initial support for new style nat
	configuation.

2011-01-04  vadim  <vadim@netcitadel.com>

	* platform/fwsm.xml: FWSM v4.x does not have "fixup" command, instead,
	we should use policy-map and class commands.

	* OSConfigurator_pix_os_inspectors_pix8.cpp (_printPolicyMapTypeInspect):
	refs #1893 fixes #1883 "inspect ip options in pix8". Added support for
	"policy-map type inspect ip-options" command in PIX v8.2 and later.
	At this time, of all possible types of "policy-map type inspect"
	command only "ip-options" is implemented.

	* PIX8ObjectGroup.cpp (toString): refs #1882 "Mixed service groups
	in PIX8". Added pix versions 8.0 and 8.3; added support for mixed
	servcie groups in pix 8.0 and later.

	* PolicyCompiler_srvre_functions.cpp (processNext): fixed #1892
	"move rule processor class separateServiceObject to
	PolicyCompiler".  This rule processor used to be implemented only
	in the compiler for PF, but since it has very general meaning, the
	same function was duplicated in other compilers as well. Moved the
	class to libfwbuilder and reimplemented several other rule
	processors to inherit from this class to avoid further duplication
	for code.

	* PolicyCompiler_pix.cpp (compile): fixed #1891 "problems with TCP
	and UDP services with source ports". Policy compiler for PIX did not
	generate correct PIX ACL lines when one Policy rule tried to match
	several TCP and/or UDP objects matching source ports.

2010-12-29  vadim  <vadim@netcitadel.com>

	* VERSION (VERSION): started 4.2.0

	This version is the first one to merge libfwbuilder and fwbuilder